# sbox_test

./: CMakeLists.txt
include/: sbox_avx2.h  sbox_avx512.h  sbox_x86.h  test.h
src/: sbox_avx2.c  sbox_avx512.c  sbox_x86.c
test/: main.c  sbox_avx2_test.c  sbox_avx512_test.c  sbox_x86.c  test.c
